--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,12 +42,8 @@ install(TARGETS ${PROJECT_NAME}
         ARCHIVE DESTINATION  ${CMAKE_INSTALL_PREFIX}/lib)
         
 install(DIRECTORY
-	"${PROJECT_SOURCE_DIR}/include/AKAZE.h"
-	"${PROJECT_SOURCE_DIR}/include/AKAZEConfig.h"
-	"${PROJECT_SOURCE_DIR}/include/fed.h"
-	"${PROJECT_SOURCE_DIR}/include/nldiffusion_functions.h"
-	"${PROJECT_SOURCE_DIR}/include/utils.h"
-        DESTINATION  ${CMAKE_INSTALL_PREFIX}/include/akaze
+	"${PROJECT_SOURCE_DIR}/akaze
+        DESTINATION  ${CMAKE_INSTALL_PREFIX}/include
         FILES_MATCHING PATTERN "*.h")
                                           
 install(FILES "${PROJECT_BINARY_DIR}/akazeConfig.cmake" 
